<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright the State of the Netherlands

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>nl.aerius</groupId>
    <artifactId>aerius-root-pom</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>
  <artifactId>aerius-file-server</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>AERIUS :: File Server</name>
  <description>The service to store files</description>

  <properties>
    <java.version>17</java.version>

    <amazons3.version>2.20.56</amazons3.version>

    <sonar.projectKey>aerius_file-server</sonar.projectKey>
    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
    <sonar.organization>aerius</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.java.pmd.reportPaths>${project.build.directory}/dependency-check-report-pmd.xml</sonar.java.pmd.reportPaths>
  </properties>

  <repositories>
    <repository>
      <id>aerius-nexus-public</id>
      <name>AERIUS Nexus repository</name>
      <url>https://nexus.aerius.nl/repository/maven-public/</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>aerius-nexus-public</id>
      <name>AERIUS Nexus Repository</name>
      <url>https://nexus.aerius.nl/repository/maven-public/</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <!-- Web-starter to get everything required for our API -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <!-- Validation-starter, so we can put constraints on configuration options -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <!-- Actuator-starter for monitoring (health endpoint and the like) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <!-- Dev dependency to help generating metadata on our configuration options -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <!-- AWS S3 dependency for easier access to S3. -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>s3</artifactId>
      <version>${amazons3.version}</version>
    </dependency>

    <!-- Testing dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
